--- a/SpaceWay/Views/Shared/_Layout.cshtml
+++ b/SpaceWay/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Register", "Create", "Passengers")</li>
+                    <li>@Html.ActionLink("Login", "Login", "Passengers")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
