--- a/SpaceWay/Views/Shared/_Layout.cshtml
+++ b/SpaceWay/Views/Shared/_Layout.cshtml
@@ -20,10 +20,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Register", "Create", "Passengers")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Passengers")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @{if (Session["Username"] == null) { 
+                            Html.RenderPartial("NotLoggedInNavBar"); }
+                        else
+                        {
+                        Html.RenderPartial("LoggedInNavBar");
+                        }
+                            }
+             
                 </ul>
             </div>
         </div>
