added isAdmin logic in navBar and check username and password in login page

--- a/SpaceWay/Views/Passengers/Login.cshtml
+++ b/SpaceWay/Views/Passengers/Login.cshtml
@@ -12,8 +12,10 @@
         <hr />
             <label>Username:</label><br />
             <input type="text" name="UN" /><br />
+            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })<br/>
             <label>Password:</label><br />
             <input type="password" name="PW" /><br />
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })<br />
             <input type="submit" value="Login" class="btn btn-default" />
    
 }
