--- a/SpaceWay/Views/Passengers/PassengerProfile.cshtml
+++ b/SpaceWay/Views/Passengers/PassengerProfile.cshtml
@@ -24,9 +24,9 @@
         <dd>
             @Html.DisplayFor(model => model.Username)
         </dd>
-
+                                                        <!-- to add edit option-->
         <dt>
-            @Html.DisplayNameFor(model => model.Password)
+            @Html.DisplayNameFor(model => model.Password)               
         </dt>
 
         <dd>
@@ -39,14 +39,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Stars)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsAdmin)
         </dd>
 
         <dt>
