--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -1,10 +1,9 @@
 ﻿@model SpaceWay.Models.Flight
-
 @{
     ViewBag.Title = "SearchFlight";
 }
 
-<h2>SearchFlight</h2>
+<h2>Search A Flight</h2>
 
 @using (Html.BeginForm())
 {
@@ -12,7 +11,18 @@
 
     <div>
         <hr />
-        <div><select id="originDD" name="@Html.NameFor(c => c.Origin)"></select></div>
+        @Html.DropDownListFor(model => model.Stations.ToList()[0].Name , new SelectList((List<SpaceWay.Models.Station>)ViewData["Stations"], "StationID", "Name"), "Origin")
+        @Html.DropDownListFor(model => model.Stations.ToList()[1].Name , new SelectList((List<SpaceWay.Models.Station>)ViewData["Stations"], "StationID", "Name"), "Destination")
+        <label>Departing:</label><input type="date" />
+        <label>Returning:</label><input type="date" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.AircraftID, "Aircraft Level", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("AircraftID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AircraftID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <input type="submit" name="buttun" value="SearchFlight" class="btn btn-default" />
     </div>
 
-    }
+}
