--- a/SpaceWay/Content/css/grayscale.css
+++ b/SpaceWay/Content/css/grayscale.css
@@ -100,6 +100,24 @@
     background-attachment: scroll;
     background-size: cover;
 }
+.mastheadview {
+    position: relative;
+    width: 100%;
+    height: auto;
+    min-height: 35rem;
+    padding: 15rem 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/blue-space-background.jpg");
+    background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/blue-space-background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+label {
+    max-width: 20rem;
+    font-size: 1rem;
+    color: darkgray !important;
+}
 
 .masthead h1 {
     font-family: 'Varela Round';
@@ -110,14 +128,33 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+.mastheadview h1 {
+    font-family: 'Varela Round';
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    letter-spacing: .8rem;
+    background: -webkit-linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, 0));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
 
 .masthead h2 {
+    max-width: 20rem;
+    font-size: 1rem;
+}
+.mastheadview h2 {
     max-width: 20rem;
     font-size: 1rem;
 }
 
 @media (min-width: 768px) {
     .masthead h1 {
+        font-size: 4rem;
+        line-height: 4rem;
+    }
+}
+@media (min-width: 768px) {
+    .mastheadview h1 {
         font-size: 4rem;
         line-height: 4rem;
     }
@@ -137,6 +174,24 @@
         max-width: 30rem;
         font-size: 1.25rem;
     }
+}
+
+@media (min-width: 992px) {
+    .mastheadview {
+        height: 100vh;
+        padding: 0;
+    }
+
+        .mastheadview h1 {
+            font-size: 6.5rem;
+            line-height: 6.5rem;
+            letter-spacing: 0.8rem;
+        }
+
+        .mastheadview h2 {
+            max-width: 30rem;
+            font-size: 1.25rem;
+        }
 }
 
 .btn {
