--- a/SpaceWay/Views/Shared/_Layout.cshtml
+++ b/SpaceWay/Views/Shared/_Layout.cshtml
@@ -87,10 +87,10 @@
             </div>
         </div>
     </nav>
-    <header class="masthead">
+    <header class="mastheadview">
         <div class="container d-flex h-100 align-items-center">
-                    @RenderBody()
-                    <hr />
+            @RenderBody()
+            <hr />
         </div>
     </header>
     <section class="contact-section bg-black">
