--- a/SpaceWay/Content/css/grayscale.css
+++ b/SpaceWay/Content/css/grayscale.css
@@ -118,8 +118,59 @@ label {
     font-size: 1rem;
     color: darkgray !important;
 }
+h2 {
+    color: darkgray !important;
+    margin-bottom: 25.5rem !important;
+    position: absolute !important;
+}
+h4{
+    color:darkgray !important;
+}
 
-.masthead h1 {
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid blue;
+    border-right: 16px solid green;
+    border-bottom: 16px solid red;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+dt{
+    color:gray !important;
+}
+dd{
+    color:white !important;
+}
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.table {
+    color:white !important;
+    line-height: 18px !important;
+}
+tr:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+    .masthead h1 {
     font-family: 'Varela Round';
     font-size: 2.5rem;
     line-height: 2.5rem;
@@ -127,6 +178,7 @@ label {
     background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    position:relative !important;
 }
 .mastheadview h1 {
     font-family: 'Varela Round';
@@ -136,27 +188,33 @@ label {
     background: -webkit-linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, 0));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    position: relative !important;
 }
 
 .masthead h2 {
     max-width: 20rem;
     font-size: 1rem;
+    color: darkgray;
+    position: relative !important;
 }
 .mastheadview h2 {
     max-width: 20rem;
     font-size: 1rem;
+    position: relative !important;
 }
 
 @media (min-width: 768px) {
     .masthead h1 {
         font-size: 4rem;
         line-height: 4rem;
+        position: relative !important;
     }
 }
 @media (min-width: 768px) {
     .mastheadview h1 {
         font-size: 4rem;
         line-height: 4rem;
+        position: relative !important;
     }
 }
 
@@ -195,6 +253,7 @@ label {
 }
 
 .btn {
+    /*original*/
     -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
     box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
     padding: 1.25rem 2rem;
@@ -203,6 +262,23 @@ label {
     text-transform: uppercase;
     letter-spacing: .15rem;
     border: 0;
+    background-color: #599bb3;
+    /*-webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+    box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+    padding: 1.25rem 2rem;
+    font-family: 'Varela Round';
+    font-size: 80%;
+    text-transform: uppercase;
+    letter-spacing: .15rem;
+    border: 0;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
+    background: -moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
+    background: -webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
+    background: -o-linear-gradient(top, #599bb3 5%, #408c99 100%);
+    background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+    background-color: #599bb3;
+    text-shadow: 0px 1px 0px #3d768a;*/
+    /*asdad*/
 }
 
 .btn-primary {
