--- a/SpaceWay/Views/Passengers/PassengerProfile.cshtml
+++ b/SpaceWay/Views/Passengers/PassengerProfile.cshtml
@@ -24,14 +24,14 @@
         <dd>
             @Html.DisplayFor(model => model.Username)
         </dd>
-                                                        <!-- to add edit option-->
-        <dt>
+                                                                 <!-- add edit password option-->
+        @*<dt>
             @Html.DisplayNameFor(model => model.Password)               
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Password)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Stars)
