--- a/SpaceWay/Views/Shared/NotLoggedInNavBar.cshtml
+++ b/SpaceWay/Views/Shared/NotLoggedInNavBar.cshtml
@@ -1,4 +1,8 @@
 ﻿<li class="nav-item">
+    <a class="nav-link js-scroll-trigger" href='@Url.Action("Index", "Home")'>Home</a>
+</li>
+
+<li class="nav-item">
     <a class="nav-link js-scroll-trigger" href='@Url.Action("Create", "Passengers")'>Sign-up</a>
     @*<input type="button" class="btn btn-info" value="Sign up" onclick="location.href='@Url.Action("Create", "Passengers")'" />*@
 </li>
