--- a/SpaceWay/Views/Home/Index.cshtml
+++ b/SpaceWay/Views/Home/Index.cshtml
@@ -6,12 +6,14 @@
 <html lang="en">
 
 <head>
+   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title>SpaceWay - plan your trip to space</title>
+   
 
     <!-- Bootstrap core CSS -->
     <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,14 +26,15 @@
     <!-- Custom styles for this template -->
     <link href="~/Content/css/grayscale.css" rel="stylesheet">
 
+
 </head>
 
-<body id="page-top">
-    
+<body id="page-top " onload="canvasFunc()">
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
+            @*<a class="navbar-brand js-scroll-trigger" href="#page-top">Sign-up</a>*@
             <button class="navbar-toggler navbar-toggler-right" type="button" href="~/Views" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -67,20 +70,35 @@
             <div class="mx-auto text-center">
                 <h1 class="mx-auto my-0 text-uppercase">SpaceWay</h1>
                 <h2 class="text-white-50 mx-auto mt-2 mb-5">Leave Earth with ease.</h2>
-
+                @{if (Session["Video"] == null)
+                    {
+                        Session["Video"] = "1"; 
+                        @*~/Content/videos/video.mp4*@
+                        @Html.Raw("<video width='320' height='240' autoplay><source src='~/Content/videos/video.mp4' type='video/mp4'></video>")
+                        } 
+                    }
                 @{if (Session["Username"] == null)
-                    {
-                        <a href='@Url.Action("Create", "Passengers")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>
+                        {
+
+
+                            @Html.Raw("<canvas id = 'myCanvas' width = '1200' height = '200'></ canvas >");
+                        }
+
+                        else
+                        {
+                            <a href='@Url.Action("SearchFlight", "Flights")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>//if logged in
+                        }
                     }
 
-                    else
-                    {
-                        <a href='@Url.Action("SearchFlight", "Flights")' class="btn btn-primary js-scroll-trigger">Book A Flight</a>//if logged in
-                    }
-                }
-            </div>
+
+
+
+                    @* <img id="spaceshipImg" src="spaceship.png" style="position:absolute;left:0; top:0;" height="20" width="20">*@
+
+</div>
         </div>
     </header>
+    
 
     <!-- About Section -->
     @*<section id="about" class="about-section text-center">
@@ -247,6 +265,10 @@
     <!-- Custom scripts for this template -->
     <script src="~/Content/js/grayscale.min.js"></script>
 
+    <!--canvas spaceship -->
+    <script src="~/Content/js/canvas.js"></script>
+    
+    
 </body>
 
 </html>
