--- a/SpaceWay/Views/Reservations/NewReservation.cshtml
+++ b/SpaceWay/Views/Reservations/NewReservation.cshtml
@@ -63,7 +63,10 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-
+        @Html.HiddenFor(model => model.PassengerID)
+        @Html.HiddenFor(model => model.OrderDate)
+        @Html.HiddenFor(model => model.OutboundID)
+        @Html.HiddenFor(model => model.InboundID)
         <div class="form-horizontal">
             <dl class="dl-horizontal">
                 <dt>
@@ -75,7 +78,7 @@
                 </dd>
             </dl>
         </div>
-
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Go to Payment" class="btn btn-default" />
