merged! royi from michal's computer

--- a/SpaceWay/Views/Passengers/Search.cshtml
+++ b/SpaceWay/Views/Passengers/Search.cshtml
@@ -11,12 +11,12 @@
     <div>
          
         <fieldset id="search">
-            <label>Search by:</label>
-            <input type="radio" id="stars" value="stars" name="search" /><label>min stars</label>
-            <input type="radio" id="reservations" value="reservations" name="search" /><label>min reservations</label>
-            <input type="radio" id="name" value="name" name="search" /><label>name</label>
-            <input type="text" id="input" name="input" />
-            <input type="submit" value="submit" class="btn btn-default" />
+            <label>Filter by:</label>
+            <input type="radio" id="stars" value="stars" name="search" /><label>min stars</label><br />
+            <input type="radio" id="reservations" value="reservations" name="search" /><label>min reservations</label><br />
+            <input type="radio" id="name" value="name" name="search" /><label>name</label><br />
+            <input type="text" id="input" name="input" /><br />
+            <input type="submit" value="Update" class="btn btn-default" /><br />
         </fieldset>
     </div>
     }
